tests/ui/feature-gates/literal-escaper.rs
#![crate_type = "lib"]

extern crate literal_escaper; //~ ERROR
